# collatz-qn

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  coverage.yml  data-checks.yml  figure-artifacts.yml  labels.yml  lint.yml  make-pipeline.yml  pre-commit.yml  test.yml
data/raw/: README_revised.md  full_residue_prime_support.csv
reports/: summary_findings.md
scripts/: compute_and_plot_residuals.py  compute_counts.py  fit_zipf_models.py  plot_figures.py
src/qn/: __init__.py  counts.py  fitting.py  io.py  plots.py
tests/: test_counts.py  test_fitting.py  test_io.py
