[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collatz-qn"
version = "0.1.0"
description = "Research code and analysis for the Collatz numerator sequence q(n)."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Laura", email = "you@example.com" }]
keywords = ["collatz", "number theory", "q(n)", "research"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "matplotlib==3.9.2",
  "scipy==1.14.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
  "mypy==1.11.2",
  "ruff==0.6.8",
  "black==24.8.0",
  "build==1.2.2",
  "twine==5.1.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src/qn --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
